--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <title>Carl Brubaker's 101 FTP Project</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <link rel="stylesheet" href="default.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   
   <body>
+    <h1>101 FTP Project by CB</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html" title="Home">Home</a></li>
+        <li><a href="things-you-should-know.html" title="Things you should know about your car">Things You Should Know</a></li>
+      </ul>
+    </nav>
+    <h2>Operating Systems</h2>
     <p>It is hard to go a whole day without using some sort of electronic device. Most people use a computer, or a handheld device like a smartphone or tablet, daily. These devices have an operating system (OS) that enable a user to use it.</p>
     <p>If you are reading this, then you have learned the English language. Computer language is binary, comprised of ones and zeros, like, 001010111010110101. Unless you can read really long strings of zeros and ones, you need an OS to translate what you want into a language the processors understand.</p>
     <p>Operating systems today also give the user a nice interface to interact with the computer. It is very convenient to open up a window on your screen and see the locations of all the folders and files on your machine, instead of the old days of typing text commands to navigate through the directories to find what you were looking for.</p>
