--- a/things-you-should-know.html
+++ b/things-you-should-know.html
@@ -19,10 +19,10 @@
     </ul>
   </nav>
   
-  <p>It would be nice if owning a vehicle was just buying it and driving it. Unfortunately it isn't. There are many things to maintain, that if not taken care of, will lead to problems down the road. And even when all the scheduled maintenance is completed, accidents can happen.</p>
+  <p>It would be nice if owning a vehicle was just buying it and driving it. Unfortunately it isn't. There are many things to maintain, that if not taken care of, will lead to problems down the road. And even when all the scheduled maintenance is completed, accidents can happen. There are also things that should be checked in between the scheduled maintenance intervals.</p>
   <p>We have compiled a list of a few things we think every car owner should know.</p>
   <h2>Regular Inspection Items</h2>
-  <p>There are a few items that should be checked every 1,000 miles, or every month, <em>whichever</em> comes first. These&nbsp;would&nbsp;be:</p>
+  <p>There are a few items that should be checked every 1,000 miles, or every month, <em>whichever comes first</em>. These&nbsp;would&nbsp;be:</p>
   <ul>
     <li type="disc">How to check Fluid Levels <i>(Not all may be applicable)</i>
       <ul type="circle">
